--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "nuxt": "^1.0.0-rc11",
-    "soundcloud": "^3.3.0"
+    "soundcloud": "^3.3.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -23,8 +25,12 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "postcss": "^6.0.14",
+    "postcss-cssnext": "^3.0.2",
+    "rucksack-css": "^1.0.2"
   }
 }
