--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "lint": "eslint --ext .js,.json,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint",
+    "pretest": "npm run lint",
+    "test": "echo \"No tests\""
   },
   "dependencies": {
     "nuxt": "^1.0.0-rc11",
@@ -29,6 +31,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "postcss": "^6.0.14",
     "postcss-cssnext": "^3.0.2",
     "rucksack-css": "^1.0.2"
