--- a/package.json
+++ b/package.json
@@ -12,28 +12,31 @@
     "lint": "eslint --ext .js,.json,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "pretest": "npm run lint",
-    "test": "echo \"No tests\""
+    "test": "echo \"No tests\"",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "config": "^1.28.1",
-    "nuxt": "^1.0.0-rc11",
+    "config": "^1.29.1",
+    "nuxt": "^1.1.0",
     "soundcloud": "^3.3.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0-beta.2",
-    "postcss": "^6.0.14",
+    "eslint-plugin-vue": "^4.2.0",
+    "postcss": "^6.0.16",
     "postcss-cssnext": "^3.0.2",
     "rucksack-css": "^1.0.2"
   }
