--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "config": "^1.29.2",
+    "config": "^1.29.4",
     "nuxt": "^1.3.0",
     "soundcloud": "^3.3.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "vue-spinner": "^1.0.3",
     "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.2.2",
